# NawoGreep

./: .gitignore  README.md  zadanie rekrutacyjne.docx  zadanie rekrutacyjne.md
Program/: CMakeLists.txt  NawoGrep.txt  program.txt  result.txt
Program/src/: CMakeLists.txt  FindedFiles.cpp  FindedFiles.hpp  Grep.cpp  Grep.hpp  main.cpp  test.cpp
Program/test/: test1.txt  test2.txt  test4.txt  test6.txt  test7.txt
